applications/educs-topology/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: educs-backend
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
